<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/closeVersusPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"

        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:elevation="5dp"
        android:layout_alignParentRight="true"/>

    <android.support.v7.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorbluedark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/colorbluelight"
                android:layout_gravity="bottom"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="45dp"
                android:outlineAmbientShadowColor="@color/darkpurple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_person_outline_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/opponentName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="10dp"
                            android:text="@string/username"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/eloicon"
                                android:layout_margin="10dp"
                                android:layout_gravity="center_vertical"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/elo_number"
                                android:textSize="20sp"
                                android:textStyle="italic"
                                android:textAlignment="center"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/vshr" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/colorbluelight"
                android:layout_gravity="bottom"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:outlineAmbientShadowColor="@color/darkpurple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_person_outline_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/YourName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="10dp"
                            android:text="@string/username"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/eloicon"
                                android:layout_margin="10dp"
                                android:layout_gravity="center_vertical"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/elo_number"
                                android:textSize="20sp"
                                android:textStyle="italic"
                                android:textAlignment="center"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/finish_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin= "10dp"
                android:text="@string/finish"
                android:textColor="@color/colorwhite"
                android:background="@drawable/versus_button"
                android:layout_weight="1"

                />


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>